packages/svelte/tests/compiler-errors/samples/runes-export-named-state/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: '',
		message: 'Cannot export value created with $state'
	}
});
